<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E9E9"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragment.menu.MenuFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_logo_menu_fragment"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_app"
        app:civ_border_color="@color/white"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_contest_menu"
        style="@style/btn_start_contest_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/btn_start_contest_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_menu_fragment" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_best_scores_menu"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/btn_best_scores_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_contest_menu" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_profile_menu"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/btn_profile_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_best_scores_menu" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/zaragoza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

